# recipe-rust

./: .gitignore  Cargo.toml  README.md  zerops-project-import.yml  zerops.yml
src/: main.rs
