[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
uuid = { version = "0.8", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"


